--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,432 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# More on Missing Data - Lab\n", "\n", "## Introduction\n", "\n", "In this lab, you'll continue to practice techniques for dealing with missing data. Moreover, you'll observe the impact on distributions of your data produced by various techniques for dealing with missing data.\n", "\n", "## Objectives\n", "\n", "In this lab you will: \n", "\n", "- Evaluate and execute the best strategy for dealing with missing, duplicate, and erroneous values for a given dataset   \n", "- Determine how the distribution of data is affected by imputing values "]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Load the data\n", "\n", "To start, load the dataset `'titanic.csv'` using pandas."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here\n"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Use the `.info()` method to quickly preview which features have missing data"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here\n"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Observe previous measures of centrality\n", "\n", "Let's look at the `'Age'` feature. Calculate the mean, median, and standard deviation of this feature. Then plot a histogram of the distribution."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here\n"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Impute missing values using the mean \n", "\n", "Fill the missing `'Age'` values using the average age. (Don't overwrite the original data, as we will be comparing to other methods for dealing with the missing values.) Then recalculate the mean, median, and std and replot the histogram."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here\n"]}, {"cell_type": "markdown", "metadata": {}, "source": ["### Commentary\n", "\n", "Note that the standard deviation dropped, the median was slightly raised and the distribution has a larger mass near the center."]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Impute missing values using the median \n", "\n", "Fill the missing `'Age'` values, this time using the median age. (Again, don't overwrite the original data, as we will be comparing to other methods for dealing with the missing values.) Then recalculate the mean, median, and std and replot the histogram."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here\n"]}, {"cell_type": "markdown", "metadata": {}, "source": ["### Commentary\n", "\n", "Imputing the median has similar effectiveness to imputing the mean. The variance is reduced, while the mean is slightly lowered. You can once again see that there is a larger mass of data near the center of the distribution."]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Dropping rows\n", "\n", "Finally, let's observe the impact on the distribution if we were to simply drop all of the rows that are missing an age value. Then, calculate the mean, median and standard deviation of the ages along with a histogram, as before."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Your code here\n"]}, {"cell_type": "markdown", "metadata": {}, "source": ["### Commentary\n", "\n", "Dropping missing values leaves the distribution and associated measures of centrality unchanged, but at the cost of throwing away data.\n", "\n", "## Summary\n", "\n", "In this lab, you briefly practiced some common techniques for dealing with missing data. Moreover, you observed the impact that these methods had on the distribution of the feature itself. When you begin to tune models on your data, these considerations will be an essential process of developing robust and accurate models."]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.4"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# More on Missing Data - Lab\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "In this lab, you'll continue to practice techniques for dealing with missing data. Moreover, you'll observe the impact on distributions of your data produced by various techniques for dealing with missing data.\n",
+    "\n",
+    "## Objectives\n",
+    "\n",
+    "In this lab you will: \n",
+    "\n",
+    "- Evaluate and execute the best strategy for dealing with missing, duplicate, and erroneous values for a given dataset   \n",
+    "- Determine how the distribution of data is affected by imputing values "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the data\n",
+    "\n",
+    "To start, load the dataset `'titanic.csv'` using pandas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv('titanic.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the `.info()` method to quickly preview which features have missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1391 entries, 0 to 1390\n",
+      "Data columns (total 12 columns):\n",
+      "PassengerId    1391 non-null float64\n",
+      "Survived       1391 non-null float64\n",
+      "Pclass         1391 non-null object\n",
+      "Name           1391 non-null object\n",
+      "Sex            1391 non-null object\n",
+      "Age            1209 non-null float64\n",
+      "SibSp          1391 non-null float64\n",
+      "Parch          1391 non-null float64\n",
+      "Ticket         1391 non-null object\n",
+      "Fare           1391 non-null float64\n",
+      "Cabin          602 non-null object\n",
+      "Embarked       1289 non-null object\n",
+      "dtypes: float64(6), object(6)\n",
+      "memory usage: 130.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "182"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Age'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.731894127378"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Age'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['AgeWithMean'] = df['Age'].fillna(df['Age'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df['AgeWithMean'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([22.        , 38.        , 26.        , 35.        , 29.73189413,\n",
+       "       54.        ,  2.        , 27.        , 14.        ,  4.        ,\n",
+       "       58.        , 20.        , 39.        , 55.        , 31.        ,\n",
+       "       34.        , 15.        , 28.        ,  8.        , 19.        ,\n",
+       "       40.        , 66.        , 42.        , 21.        , 18.        ,\n",
+       "        3.        ,  7.        , 49.        , 29.        , 65.        ,\n",
+       "       28.5       ,  5.        , 11.        , 45.        , 17.        ,\n",
+       "       32.        , 16.        , 25.        ,  0.83      , 30.        ,\n",
+       "       33.        , 23.        , 24.        , 46.        , 59.        ,\n",
+       "       71.        , 37.        , 47.        , 14.5       , 70.5       ,\n",
+       "       32.5       , 12.        ,  9.        , 36.5       , 51.        ,\n",
+       "       55.5       , 40.5       , 44.        ,  1.        , 61.        ,\n",
+       "       56.        , 50.        , 36.        , 45.5       , 20.5       ,\n",
+       "       62.        , 41.        , 52.        , 63.        , 23.5       ,\n",
+       "        0.92      , 43.        , 60.        , 10.        , 64.        ,\n",
+       "       13.        , 48.        ,  0.75      , 53.        , 57.        ,\n",
+       "       80.        , 70.        , 24.5       ,  6.        ,  0.67      ,\n",
+       "       30.5       ,  0.42      , 34.5       , 74.        ])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['AgeWithMean'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1391 entries, 0 to 1390\n",
+      "Data columns (total 13 columns):\n",
+      "PassengerId    1391 non-null float64\n",
+      "Survived       1391 non-null float64\n",
+      "Pclass         1391 non-null object\n",
+      "Name           1391 non-null object\n",
+      "Sex            1391 non-null object\n",
+      "Age            1209 non-null float64\n",
+      "SibSp          1391 non-null float64\n",
+      "Parch          1391 non-null float64\n",
+      "Ticket         1391 non-null object\n",
+      "Fare           1391 non-null float64\n",
+      "Cabin          602 non-null object\n",
+      "Embarked       1289 non-null object\n",
+      "AgeWithMean    1391 non-null float64\n",
+      "dtypes: float64(7), object(6)\n",
+      "memory usage: 141.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observe previous measures of centrality\n",
+    "\n",
+    "Let's look at the `'Age'` feature. Calculate the mean, median, and standard deviation of this feature. Then plot a histogram of the distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Impute missing values using the mean \n",
+    "\n",
+    "Fill the missing `'Age'` values using the average age. (Don't overwrite the original data, as we will be comparing to other methods for dealing with the missing values.) Then recalculate the mean, median, and std and replot the histogram."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Commentary\n",
+    "\n",
+    "Note that the standard deviation dropped, the median was slightly raised and the distribution has a larger mass near the center."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Impute missing values using the median \n",
+    "\n",
+    "Fill the missing `'Age'` values, this time using the median age. (Again, don't overwrite the original data, as we will be comparing to other methods for dealing with the missing values.) Then recalculate the mean, median, and std and replot the histogram."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Commentary\n",
+    "\n",
+    "Imputing the median has similar effectiveness to imputing the mean. The variance is reduced, while the mean is slightly lowered. You can once again see that there is a larger mass of data near the center of the distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropping rows\n",
+    "\n",
+    "Finally, let's observe the impact on the distribution if we were to simply drop all of the rows that are missing an age value. Then, calculate the mean, median and standard deviation of the ages along with a histogram, as before."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "182"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Age'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       22.0\n",
+       "1       38.0\n",
+       "2       26.0\n",
+       "3       35.0\n",
+       "4       35.0\n",
+       "        ... \n",
+       "1386    47.0\n",
+       "1387    17.0\n",
+       "1388    47.0\n",
+       "1389    48.0\n",
+       "1390    14.5\n",
+       "Name: Age, Length: 1391, dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Age']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       22.0\n",
+       "1       38.0\n",
+       "2       26.0\n",
+       "3       35.0\n",
+       "4       35.0\n",
+       "        ... \n",
+       "1386    47.0\n",
+       "1387    17.0\n",
+       "1388    47.0\n",
+       "1389    48.0\n",
+       "1390    14.5\n",
+       "Name: Age, Length: 1209, dtype: float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[~df['Age'].isnull()]['Age']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "age_na_dropped = df[~df['Age'].isnull()]['Age']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Commentary\n",
+    "\n",
+    "Dropping missing values leaves the distribution and associated measures of centrality unchanged, but at the cost of throwing away data.\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "In this lab, you briefly practiced some common techniques for dealing with missing data. Moreover, you observed the impact that these methods had on the distribution of the feature itself. When you begin to tune models on your data, these considerations will be an essential process of developing robust and accurate models."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
